js262/test/language/expressions/postfix-decrement/line-terminator-line-separator.js


/*---
info: Line Terminator between LeftHandSideExpression and "--" is not allowed
es5id: 11.3.2_A1.1_T3
esid: sec-postfix-decrement-operator
description: Checking Line separator
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

x --;

